--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Title: FCS Generator 2
 Version: 1.0.0
 Author: Isam Ben Soltane
 Maintainer: <isam.ben-soltane@inserm.fr>
-Description: Shiny App meant to generate highly customizable FCS files from scratch or use cytometry data to generate "ground truth" files 
-which can then be used as a reference when benchmarking alrogithms.
+Description: Shiny App meant to generate highly customizable FCS files from scratch or use cytometry data to generate "ground truth" files which can then be used as a reference when benchmarking alrogithms.
 License: ?
 Encoding: UTF-8
 LazyData: true
